2008-05-20  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Use GNU Automake 1.10.1 facilities.

	* scm/Makefile.am (AUTOMAKE_OPTIONS): Delete var.
	(guile_postgres_sources, d_DATA, ETAGS_ARGS, EXTRA_DIST): Likewise.
	(dist_d_DATA): New var.
	(install-data-hook): Rewrite target.
	* doc/Makefile.am (.twerp.texi): Use $(GUILE_TOOLS).
	* Makefile.am (.module-catalog): Use $(GUILE_TOOLS).
	(.c.doc, .scm.doc, install-data-hook, .doc-index): Likewise.
	* configure.in (AM_INIT_AUTOMAKE): Use one-arg form.
	* autogen.sh: Simplify invocation of doc/.make-automake-frags.
	Call automake with option `-Wall'.

2008-05-19  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Remove doc-coverage support.

	* doc/cov: Delete file.
	* doc/Makefile.am (EXTRA_DIST): Remove cov.
	(dist-hook): Delete target.

2008-05-19  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Add handling for #:finish to pgtable-manager (and -worker) closure.

	* scm/postgres-table.scm: From module (database postgres),
	also select `pg-finish'.
	(pgtable-manager): Handle #:finish; add @findex entries.

2008-05-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Make the result object drop reference to the connection, if dead.

	* libpostgres.c (xr_mark): If the connection object's
	connection is dead, replace the reference to it w/ #f.
	(pg_get_connection): Update docstring.

2008-05-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Use GNU Libtool 2.2.2 facilities.

	* configure.in (AC_DISABLE_STATIC): Delete.
	(AC_LIBTOOL_TAGS, AC_PROG_LIBTOOL): Likewise.
	(LT_PREREQ, LT_INIT): New macro calls.
	* build-aux/aclocal-suffix: Delete file.
	* autogen.sh: Fix bug: Check for ltmain.sh in build-aux/; no longer
	append build-aux/aclocal-suffix to aclocal.m4; do "aclocal --install".

2008-05-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Avoid dropdb(1) and createdb(1); use SQL commands directly.

	* configure.in (DROPDB, CREATEDB): Delete AC_CHECK_PROGS vars.

2008-05-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Add standard introspection support to (database postgres-meta).
